WIP starting search by zipcode

--- a/www/Volunteer.html
+++ b/www/Volunteer.html
@@ -76,6 +76,8 @@
                             </li>
                             <li><a href="Organize.html">Organize</a>
                             </li>
+                            <li><a href="volunteer-search.html">Volunteer Search</a>
+                            </li>
                         </ul>
                     </div>
                     
@@ -122,35 +124,24 @@
                 </div>
                 </div>
             </div>
+        </div>
+
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingTwo">
+                <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Youth Outreach in Wilmington
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Neighborhood Cleanup
                     </a>
                 </h4>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                    <div class="panel-body">
-                        Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingThree">
-                <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Looking for help building playground in near Rockland
-                    </a>
-                </h4>
-                </div>
-                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                    u nesciunt sapiente ea proident. Ad vaw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                derson sciunt you probably haven't heard of them accusamus labore sustainable VHS.
                 </div>
                 </div>
             </div>
-            </div>
+        </div>
 
             <footer>
             <div class="container">
