--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,8 @@
                             </li>
                             <li><a href="Organize.html">Organize</a>
                             </li>
+                            <li><a href="volunteer-search.html">Volunteer Search</a>
+                            </li>
                         </ul>
                         
                     </div>
