WIP more bootstrap mods

--- a/www/Volunteer.html
+++ b/www/Volunteer.html
@@ -100,10 +100,11 @@
                 </div>
 
                 <div class="filter scrollpoint sp-effect3">
-                    <a href="javascript:void(0)" class="button js-filter-all active">All Screens</a>
+                    <a href="campaign.html" class="button js-filter-all active">Create a Campaign</a>
                     <a href="javascript:void(0)" class="button js-filter-one">User Access</a>
-                    <a href="javascript:void(0)" class="button js-filter-two">Social Network</a>
                     <a href="javascript:void(0)" class="button js-filter-three">Media Players</a>
+                    <a href="javascript:void(0)" class="button js-filter-two">Become a Volunteer</a>
+                    
                 </div>
                 
             </div>
