--- a/www/Campaign.html
+++ b/www/Campaign.html
@@ -65,7 +65,7 @@
                             </li>
                             <li><a href="Organize.html">Organize</a>
                             </li>
-                            <li><a href="volunteer-search.html">Organize</a>
+                            <li><a href="volunteer-search.html">Volunteer Search</a>
                             </li>
                         </ul>
                     </div>
