--- a/www/Donate.html
+++ b/www/Donate.html
@@ -76,7 +76,7 @@
                             </li>
                             <li><a href="Organize.html">Organize</a>
                             </li>
-                            <li><a href="volunteer-search.html">Organize</a>
+                            <li><a href="volunteer-search.html">Volunteer Search</a>
                             </li>
                         </ul>
                     </div>
