WIP added functionality to camaign and volunteer signup

--- a/www/Campaign.html
+++ b/www/Campaign.html
@@ -96,17 +96,13 @@
 
                         <input id="ownerFirstName" type="text" class="form-control" placeholder="First Name" aria-describedby="basic-addon1">
 
-                        <input id="lastName" type="text" class="form-control" placeholder="Last Name" aria-describedby="basic-addon1">
+                        <input id="ownerLastName" type="text" class="form-control" placeholder="Last Name" aria-describedby="basic-addon1">
 
-                        <input id="email" type="text" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
+                        <input id="campaignEmail" type="text" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
 
                         <input id="organizationName" type="text" class="form-control" placeholder="Organization Name" aria-describedby="basic-addon1">
 
                         <input id="address1" type="text" class="form-control" placeholder="Address 1" aria-describedby="basic-addon1">
-
-                        <input id="address2" type="text" class="form-control" placeholder="Address 2" aria-describedby="basic-addon1">
-
-                        <input id="city" type="text" class="form-control" placeholder="City" aria-describedby="basic-addon1">
 
                         <input id="campaignZipcode" type="text" class="form-control" placeholder="Zipcode" aria-describedby="basic-addon1">
                     <!--
