--- a/www/Volunteer.html
+++ b/www/Volunteer.html
@@ -94,16 +94,17 @@
             <div class="container">
 
                 <div class="section-heading scrollpoint sp-effect3">
+                    <button type="submit" class="btn btn-primary btn-lg"><a href="campaign.html">Create Campaign</a></button>
+
                     <h1>Join a Team Today</h1>
                     <div class="divider"></div>
                     <p>See how you can contribute</p>
                 </div>
 
                 <div class="filter scrollpoint sp-effect3">
-                    <a href="campaign.html" class="button js-filter-all active">Create a Campaign</a>
                     <a href="javascript:void(0)" class="button js-filter-one">User Access</a>
                     <a href="javascript:void(0)" class="button js-filter-three">Media Players</a>
-                    <a href="javascript:void(0)" class="button js-filter-two">Become a Volunteer</a>
+                    <a href="volunteer-signup.html" class="button js-filter-two">Become a Volunteer</a>
                     
                 </div>
                 
@@ -127,18 +128,34 @@
             </div>
         </div>
 
+<!--
+<div class="container">
+                <div class="section-heading scrollpoint sp-effect3">
+                    <h1 id="campaignTitle">Wilmington Riverfront Clean-up</h1>
+                    <div class="divider"></div>
+                    <p id="campaignPurpoose">As the summer in now in full swing, our riverfront will be become an increasingly popular destination for both locals and Wilmington visitors. I am seeking as many volunteers as possible to help clean up our Riverfront.</p>
+                    <br>
+                    <br>
+                   <p id="currentVolunteers">34</p><h5>Current volunteers</h5>
+                </div>
+            </div>
+    -->
+
+
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Neighborhood Cleanup
+                    Wilmington Riverfront Clean-up
                     </a>
                 </h4>
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                derson sciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <h4>As the summer in now in full swing, our riverfront will be become an increasingly popular destination for both locals and Wilmington visitors. I am seeking as many volunteers as possible to help clean up our Riverfront.
+                    </h4>
+                    <a href="donate.html">Checkout Campaign</a>
                 </div>
                 </div>
             </div>
