--- a/www/index.html
+++ b/www/index.html
@@ -91,14 +91,14 @@
                             <div class="about-item scrollpoint sp-effect2">
                                <a href="campaign.html"><i class="fa fa-download fa-2x"></i></a>
                                 <h3>Start Local Campaign</h3>
-                                <p>Lorem ipsum, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                                <p> Have a cause to solve but need more help? Easily begin your campaign and connect with local, eager volunteers.</p>
                             </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6" >
                         <div class="about-item scrollpoint sp-effect5">
                             <a href="volunteer.html"><i class="fa fa-mobile fa-2x"></i></a>
                             <h3>Become a Volunteer</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <p>Have you been looking to join local volunteer teams but confused on how to begin? Find the team that best fits you within seconds.</p>
                         </div>
                     </div>
 <!--
