--- a/www/Campaign.html
+++ b/www/Campaign.html
@@ -195,7 +195,7 @@
 
                 </div>
                
-                <button type="button" class="btn" onclick="">Start Campaign</button>
+                <button type="button" class="btn" onclick="pullCampaignInfo()">Start Campaign</button>
 
             </div>
 
@@ -229,6 +229,7 @@
     <script src="assets/js/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
     <script src="assets/js/waypoints.min.js"></script>
     <script src="assets/js/scripts.js"></script>
+    <script src="userInput.js"></script>
     <script>
         $(document).ready(function() {
             appMaster.preLoader();
