--- a/www/volunteer-signup.html
+++ b/www/volunteer-signup.html
@@ -128,7 +128,7 @@
                     -->
                 </div>
                 <br>
-                <a href="volunteer-search.html"><button type="button" class="btn" onclick="">Start Volunteering</button></a>
+                <a href="volunteer-search.html"><button type="button" class="btn" onclick="pullVolunteerInfo()">Start Volunteering</button></a>
 
             </div>
 
