--- a/www/volunteer-signup.html
+++ b/www/volunteer-signup.html
@@ -61,7 +61,7 @@
                             </li>
                             <li><a href="Volunteer.html">Volunteer</a>
                             </li>
-                            <li><a href="Donate.html">Donate</a>
+                            <li><a href="meetups.html">Meetup</a>
                             </li>
                             <li><a href="Organize.html">Organize</a>
                             </li>
