wip index.html complete

--- a/www/Volunteer.html
+++ b/www/Volunteer.html
@@ -102,10 +102,7 @@
                 </div>
 
                 <div class="filter scrollpoint sp-effect3">
-                    <a href="javascript:void(0)" class="button js-filter-one">User Access</a>
-                    <a href="javascript:void(0)" class="button js-filter-three">Media Players</a>
                     <a href="volunteer-signup.html" class="button js-filter-two">Become a Volunteer</a>
-                    
                 </div>
                 
             </div>
@@ -155,7 +152,7 @@
                 <div class="panel-body">
                     <h4>As the summer in now in full swing, our riverfront will be become an increasingly popular destination for both locals and Wilmington visitors. I am seeking as many volunteers as possible to help clean up our Riverfront.
                     </h4>
-                    <a href="donate.html">Checkout Campaign</a>
+                    <a href="wilmingtonCleanUp.html">Checkout Campaign</a>
                 </div>
                 </div>
             </div>
