--- a/www/volunteer-search.html
+++ b/www/volunteer-search.html
@@ -107,8 +107,9 @@
                         <div class="row">
                             <div class="col-md-8 col-sm-8 scrollpoint sp-effect1">
                                 <form role="form">
-                                        <input type="text" class="form-control" placeholder="Enter Your Zipcode">
+                                        <input type="text" id="volunteerZip" class="form-control" placeholder="Enter Your Zipcode">
                                 </form>
+                                <a href="javascript:void(0)" class="button js-filter-one" onclick="">Enter</a>
                             </div>
                         </div>
                     </div>
