stuff is happening fast

--- a/www/Volunteer.html
+++ b/www/Volunteer.html
@@ -119,7 +119,7 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                <h4>We are looking for community members with building experience, gardners, and any looking to make our neighborhood a little more vibrant.
+                <h4>We are looking for community members with building experience, gardners, and anyone looking to make our neighborhood a little more vibrant.
                 </h4>
                 <a href="parkrebuild.html">Checkout Campaign</a>
                 </div>
