--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,51 @@
        
     </header>
 
+    <section id="about">
+            <div class="container">
+                
+                <div class="section-heading scrollpoint sp-effect3">
+                    <h1>Our Time Is Now</h1>
+                    <div class="divider"></div>
+                    <p>Discover How You Can Give back</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-3 col-sm-3 col-xs-6">
+                            <div class="about-item scrollpoint sp-effect2">
+                               <a href="campaign.html"><i class="fa fa-download fa-2x"></i></a>
+                                <h3>Start Local Campaign</h3>
+                                <p> Have a cause to solve but need more help? Easily begin your campaign and connect with local, eager volunteers.</p>
+                            </div>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-6" >
+                        <div class="about-item scrollpoint sp-effect5">
+                            <a href="volunteer-signup.html"><i class="fa fa-mobile fa-2x"></i></a>
+                            <h3>Become a Volunteer</h3>
+                            <p>Have you been looking to join local volunteer teams but confused on how to begin? Find the team that best fits you within seconds.</p>
+                        </div>
+                    </div>
+<!--
+                    <div class="col-md-3 col-sm-2 col-xs-6" >
+                        <div class="about-item scrollpoint sp-effect1">
+                            <a href=""><i class="fa fa-sliders fa-2x"></i></a>
+                            <h3>Organize</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-2 col-xs-6" >
+                        <div class="about-item scrollpoint sp-effect5">
+                            <a href=""><i class="fa fa-users fa-2x"></i></a>
+                            <h3>Donate</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                        </div>
+                    </div>
+-->    
+                </div>
+            </div>
+        </section>
+
     <footer>
             <div class="container">
                 <a href="#" class="scrollpoint sp-effect3">
