--- a/www/parkrebuild.html
+++ b/www/parkrebuild.html
@@ -93,7 +93,7 @@
                 <div class="section-heading scrollpoint sp-effect3">
                     <h1 id="campaignTitle">Neighborhood Park rebuild</h1>
                     <div class="divider"></div>
-                    <p id="campaignPurpoose">We are looking for community members with building experience, gardners, and any looking to make our neighborhood a little more vibrant.</p>
+                    <p id="campaignPurpoose">We are looking for community members with building experience, gardners, and anyone looking to make our neighborhood a little more vibrant.</p>
                      <a href="javascript:void(0)" class="button js-filter-one" onclick="" >Join Campaign</a>
                     <br>
                     <br>
